Run get-runner-files.sh on docker build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,13 @@
 FROM ubuntu:22.04
+
+# perl is for shasum
 RUN apt-get update && \
     apt-get install \
     curl \
+    perl \
+    jq \
     -y
+
+COPY *.sh /root/
+RUN chmod +x /root/*.sh && \
+    (cd /root && ./get-runner-files.sh)
